--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>金帛移动端ui</title>
 	<meta name="viewport" content="width=device-width,user-scalable=no">
-	<link rel="stylesheet" href="jinbo.ui.css">
+	<link rel="stylesheet" href="./css/jinbo.ui.css">
 <style>
 body {
 	background: #f04a3a;
@@ -37,7 +37,7 @@ body {
 	<p class="text-center fz14">密码错误密码错误密码错误密码错误密码错误密码错误密码错误密码错误</p>
 	<div class="ui-btn-group mgt15">
 		<a href="javascript:;" class="ui-btn">确认</a>
-		<a href="javascript:;" class="ui-btn">取消</a>
+		<a href="javascript:;" class="ui-btn" data-type="close">取消</a>
 	</div>
 </div>
 <!-- dialog has input -->
@@ -51,7 +51,7 @@ body {
 	</div>
 </div>
 
-<script src="zepto.min.js"></script>
-<script src="jinbo.ui.js"></script>
+<script src="./js/zepto.min.js"></script>
+<script src="./js/jinbo.ui.js"></script>
 </body>
 </html>
