--- a/tpl.html
+++ b/tpl.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>金帛移动端ui</title>
 	<meta name="viewport" content="width=device-width,user-scalable=no">
-	<link rel="stylesheet" href="./css/jinbo.ui.css">
+	<link rel="stylesheet" href="./css/m-ui.css">
 <style>
 body {
 	background: #f04a3a;
@@ -52,6 +52,6 @@ body {
 </div>
 
 <script src="./js/zepto.min.js"></script>
-<script src="./js/jinbo.ui.js"></script>
+<script src="./js/m-ui.js"></script>
 </body>
 </html>
